# neuro-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: devcontainer.json
docker/: ubuntu25.04.Dockerfile
src/: CMakeLists.txt  Main.cpp  Service.cpp  Service.hpp  VideoReceiver.cpp  VideoReceiver.hpp  VideoStreamer.cpp  VideoStreamer.hpp
src/core/: CMakeLists.txt  Thread.cpp  Thread.hpp
src/core/include/core/: Thread.hpp
src/core/src/core/: Thread.cpp
src/frame_buffer/: CMakeLists.txt
src/frame_buffer/include/frame_buffer/: Factory.hpp  IFrameBuffer.hpp  IFrameConsumer.hpp
src/frame_buffer/src/frame_buffer/: Factory.cpp  FrameBuffer.cpp  FrameBuffer.hpp
src/jpeg_decoder/: CMakeLists.txt
src/jpeg_decoder/include/jpeg_decoder/: Factory.hpp  IImageConsumer.hpp  IJpegDecoder.hpp
src/jpeg_decoder/src/jpeg_decoder/: Factory.cpp  JpegDecoder.cpp  JpegDecoder.hpp
src/jpeg_encoder/: CMakeLists.txt
src/jpeg_encoder/include/jpeg_encoder/: Factory.hpp  IJpegConsumer.hpp  IJpegEncoder.hpp
src/jpeg_encoder/src/jpeg_encoder/: Factory.cpp  JpegEncoder.cpp  JpegEncoder.hpp
src/neural_network/: CMakeLists.txt
src/neural_network/include/neural_network/: Factory.hpp  IDetectionConsumer.hpp  INeuralNetwork.hpp
src/neural_network/src/neural_network/: Factory.cpp  NeuralNetwork.cpp  NeuralNetwork.hpp
src/udp_server/: CMakeLists.txt
src/udp_server/include/udp_server/: Factory.hpp  IDatagramConsumer.hpp  IFrameChunkConsumer.hpp  IUdpServer.hpp
src/udp_server/src/udp_server/: Factory.cpp  UdpServer.cpp  UdpServer.hpp
src/websocket_server/: CMakeLists.txt
src/websocket_server/include/websocket_server/: Factory.hpp  IWebsocketServer.hpp
src/websocket_server/src/websocket_server/: Factory.cpp  WebsocketServer.cpp  WebsocketServer.hpp
src/yolo/: CMakeLists.txt
src/yolo/include/yolo/: Factory.hpp  IYolo.hpp  YoloInitParams.hpp  YoloPrediction.hpp
src/yolo/src/yolo/: Factory.cpp  Yolo.cpp  Yolo.hpp
test/integration/: conftest.py
test/integration/python/: converter.py  index.html  (+3 more)
(+2 files in other folders)
