add_subdirectory(core)
add_subdirectory(yolo)
add_subdirectory(udp_server)
add_subdirectory(frame_buffer)
add_subdirectory(jpeg_decoder)
add_subdirectory(neural_network)
add_subdirectory(jpeg_encoder)
add_subdirectory(websocket_server)

add_executable(${PROJECT_NAME} Main.cpp Service.hpp Service.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE core udp_server websocket_server frame_buffer jpeg_decoder jpeg_encoder neural_network)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
